[gd_scene load_steps=7 format=3 uid="uid://diqawyle7a158"]

[ext_resource type="Script" path="res://Nodes/Scripts/hkbVariableBindingSetScene.gd" id="1_xmvmo"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://Resources/Icons/ConfirmDeleteButton.png" id="2_hx6mm"]
[ext_resource type="Texture2D" uid="uid://csneaifgmkfng" path="res://Resources/Icons/PaintButtonAlpha.png" id="3_hakca"]
[ext_resource type="Texture2D" uid="uid://bh1i3gursfdn1" path="res://Resources/Icons/PinButtonAlpha.png" id="4_qciyt"]
[ext_resource type="Texture2D" uid="uid://b3jqrjqx6enly" path="res://Resources/Icons/UnpinButtonAlpha.png" id="5_8vuwn"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://Resources/Icons/DeleteButton.png" id="5_q6d0d"]

[node name="hkbVariableBindingSet" type="GraphNode"]
offset_right = 300.0
offset_bottom = 100.0
title = "hkbVariableBindingSet"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_xmvmo")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(518, 576)
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 514.0
offset_bottom = 572.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_hx6mm")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   hkbVariableBindingSet"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PaintButton" type="Button" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
text = "      "

[node name="BrushIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PaintButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hakca")
stretch_mode = 2

[node name="PinButton" type="Button" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
text = "      "

[node name="PinIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qciyt")
stretch_mode = 2

[node name="UnpinIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PinButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8vuwn")
stretch_mode = 2

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_q6d0d")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="indexOfBindingToEnable" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/indexOfBindingToEnable"]
layout_mode = 2
text = "   indexOfBindingToEnable"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/indexOfBindingToEnable"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="indexOfBindingToEnableSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/indexOfBindingToEnable"]
custom_minimum_size = Vector2(85, 0)
layout_direction = 2
layout_mode = 2
min_value = -1.0
max_value = 1000.0
value = -1.0

[node name="ButtonContainer" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="AddBinding" type="Button" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Binding"

[node name="RemoveBinding" type="Button" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Binding"

[node name="UpdateVariables" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Space2" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/UpdateVariables"]
layout_mode = 2
size_flags_horizontal = 6

[node name="updateVariablesButton" type="Button" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/UpdateVariables"]
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
text = "Update Graph Data"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/UpdateVariables"]
layout_mode = 2
size_flags_horizontal = 6

[node name="ScrollContainer" type="ScrollContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
custom_minimum_size = Vector2(0, 425)
layout_mode = 2
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/PaintButton" to="." method="_on_paint_button_pressed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/indexOfBindingToEnable/indexOfBindingToEnableSpinBox" to="." method="_on_index_of_binding_to_enable_spin_box_value_changed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer/AddBinding" to="." method="_on_add_binding_pressed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer/RemoveBinding" to="." method="_on_remove_binding_pressed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/UpdateVariables/updateVariablesButton" to="." method="_on_update_variables_button_pressed"]
